@@ -3,7 +3,7 @@
 # This is part of the schedule project.
 
 BEGIN { require 5.012 }
-package Schedule v7.5.3;
+package Schedule v7.6.0;
 
 use strict;
 use warnings;
@@ -48,6 +48,7 @@ my $nouser = '';
 my $nohost = '';
 my $nodir = '';
 my $nocommand = '';
+my @commandtext = ();
 my $keepdir = '';
 my $destjob = 0;
 my $tests = [[], [], []];
@@ -67,7 +68,7 @@ sub cmd_queue {
 	require Schedule::Client::Cmd::Queue;
 	&Schedule::Client::Cmd::Queue::queue(@_,
 		$destjob, $cancel, $ignore, $immediate, $keepdir, $tests,
-		$status, $title, $text)
+		$status, $title, $text, @commandtext)
 }
 
 sub cmd_run {
@@ -153,6 +154,7 @@ eval 'END { $s->did_alpha() || $s->exec_alpha() }';
 
 $s->get_options(
 	'exit|e=i', \$cancel,
+	'command-text|C=s', \@commandtext,
 	'no-user|nouser|u', \$nouser,
 	'no-host|nohost|H', \$nohost,
 	'no-dir|nodir|D', \$nodir,
@@ -170,7 +172,7 @@ $s->get_options(
 	'no-stime|nostime', sub { $stime = '' },
 	'no-etime|noetime', sub { $etime = '' },
 	'no-time|notime|n', sub { $qtime = $stime = $etime = '' },
-	'job|j=i', \$destjob,
+	'job|j=s', \$destjob,
 	'ok|o=s', $tests->[0],
 	'finished|x=s', $tests->[1],
 	'started|s=s', $tests->[2]
